added zos configuration example README

--- a/README
+++ b/README
@@ -73,6 +73,10 @@ Notes for some targets:
 
 - For PalmOs, see http://palmzlib.sourceforge.net/
 
+- Example of IBM z/OS configuration:
+  export CC=ibm-clang
+  export CFLAGS='-O2 -m32 -D_UNIX03_SOURCE -D_UNIX03_THREADS -D_POSIX_SOURCE -D_POSIX_THREADS -D_OPEN_SYS_SOCK_IPV6=1 -D_XOPEN_SOURCE_EXTENDED=1 -DOE_SOCKETS -D_OPEN_SYS_IF_EXT=1'
+
 
 Acknowledgments:
 
